# harness

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AGENT_USAGE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASING.md  RESEARCH_MULTIPROJECT.md  SECURITY.md  WORKFLOW.md  build.rs  code_analysis.md  docker-compose.yml  evaluate.py  harness.toml  labels.yaml  release-plz.toml  sigtrap-test.txt  start-server.sh  workflow.yaml
crates/harness-agents/: CHANGELOG.md  Cargo.toml
crates/harness-agents/src/: anthropic_api.rs  budget.rs  claude.rs  claude_adapter.rs  claude_prompt_layer_tests.rs  claude_stream.rs  claude_tests.rs  cloud_setup.rs  codex.rs  codex_adapter.rs  codex_adapter_tests.rs  codex_exec_parser.rs  codex_exec_parser_tests.rs  codex_failure_tests.rs  codex_review_tests.rs  codex_spawn.rs  codex_tests.rs  compress_model.rs  lib.rs  process_group.rs  provider_backpressure.rs  registry.rs  scoped_token.rs  spawn_contract.rs  streaming.rs  streaming_tests.rs
crates/harness-agents/src/claude_tests/: lifecycle.rs
crates/harness-agents/src/codex_tests/: config_args.rs
crates/harness-api/: CHANGELOG.md  Cargo.toml
crates/harness-api/src/: lib.rs
crates/harness-cli/: CHANGELOG.md  Cargo.toml
crates/harness-cli/src/: agent.rs  commands.rs  gc.rs  main.rs
crates/harness-cli/src/cmd/: mcp_server.rs  mod.rs  pr.rs
crates/harness-cli/src/commands/: eval.rs  exec.rs  reconcile.rs  runtime.rs  runtime_log_tests.rs  serve.rs  status.rs
crates/harness-context/: CHANGELOG.md  Cargo.toml
crates/harness-context/src/: composer.rs  lib.rs  providers.rs  tests.rs  types.rs
crates/harness-core/: CHANGELOG.md  Cargo.toml
crates/harness-core/src/: agent.rs  agent_tests.rs  agents_md.rs  alert.rs  capability.rs  compress.rs  config.rs  config_context_tests.rs  config_tests.rs  config_workflow_circuit_breaker_tests.rs  db.rs  db_pg.rs  db_pg_schema_reaper.rs  db_pg_schema_registry.rs  db_pg_schema_registry_tests.rs  db_pg_split.rs  db_pg_tests.rs  db_serializable.rs  db_test_safety.rs  db_tests.rs  error.rs  interceptor.rs  lang_detect.rs  lib.rs  project_identity.rs  prompts.rs  proof_of_work.rs  review.rs  run_id.rs  run_registry.rs  shell_safety.rs  store_backend.rs  test_support.rs  tool_isolation.rs  types.rs  usage_probe.rs  validation.rs
crates/harness-core/src/config/: agents.rs  agents_review_tests.rs  alerting.rs  compression.rs  concurrency.rs  dirs.rs  intake.rs  isolation.rs  maintenance.rs  misc.rs  observe.rs  project.rs  resolve.rs  server.rs  shutdown.rs  stall_timeout.rs  workflow.rs  workflow_circuit_breaker.rs  workflow_intake_binding_tests.rs  workflow_tests.rs  workspace_config.rs
crates/harness-core/src/prompts/: context.rs  contract.rs  contract_prompt_tests.rs  cross_review.rs  gc_signal.rs  intake.rs  (+13 more)
crates/harness-core/tests/: otel_config.rs  task_id.rs
crates/harness-eval/: CHANGELOG.md  Cargo.toml
crates/harness-eval/src/: benchmark.rs  ingest.rs  lib.rs  model.rs  scoring.rs  scoring_tests.rs
crates/harness-eval/tests/: pr_repair_benchmark_cli.rs  pr_repair_snapshot_completeness.rs
crates/harness-exec/: CHANGELOG.md  Cargo.toml
crates/harness-exec/src/: lib.rs  markdown.rs  plan.rs
crates/harness-gc/: CHANGELOG.md  Cargo.toml
crates/harness-gc/src/: artifact_parser.rs  checkpoint.rs  draft_store.rs  gc_agent.rs  lib.rs  remediation.rs  signal_detector.rs
crates/harness-observe/: CHANGELOG.md  Cargo.toml
crates/harness-observe/benches/: event_store_bench.rs
crates/harness-observe/src/: event_store.rs  health.rs  lib.rs  metrics.rs  otel_attributes.rs  otel_export.rs  otel_trajectory.rs  quality.rs  session.rs  stats.rs  usage.rs
crates/harness-protocol/: CHANGELOG.md  Cargo.toml
crates/harness-protocol/src/: codec.rs  context.rs  contract.rs  lib.rs  methods.rs  notifications.rs
crates/harness-rules/: CHANGELOG.md  Cargo.toml
crates/harness-rules/src/: engine.rs  exec_policy.rs  lib.rs  lifecycle.rs  loader.rs  scanner.rs  triage.rs
crates/harness-rules/tests/: guard_scripts_test.rs
crates/harness-sandbox/: CHANGELOG.md  Cargo.toml
crates/harness-sandbox/src/: lib.rs
crates/harness-server/: CHANGELOG.md  Cargo.toml  build.rs  test-guard.sh
crates/harness-server/src/: app_state.rs  assets.rs  checkpoint.rs  command_safety.rs  complexity_router.rs  contract_validator.rs  dashboard.rs  db.rs  eval_store.rs  eval_store_tests.rs  event_replay.rs  event_replay_tests.rs  exec_plan_db.rs  feishu_client.rs  github_auth.rs  github_pr_hygiene.rs  github_pr_merge.rs  github_pr_snapshot.rs  github_pr_snapshot_tests.rs  hook_enforcer.rs  http.rs  isolation_health.rs  lib.rs  memory_monitor.rs  notify.rs  observation_compression.rs  overview.rs  parallel_dispatch.rs  parallel_dispatch_tests.rs  periodic_retry.rs  periodic_reviewer.rs  plan_db.rs  policy_enforcer.rs  post_validator.rs  postgres_catalog.rs  project_registry.rs  project_registry_tests.rs  q_value_store.rs  q_value_store_tests.rs  quality_trigger.rs  (+74 more)
crates/harness-server/static/: dashboard.css  dashboard.js  overview.html
crates/harness-server/tests/: checkpoint_recovery.rs  exec_policy_startup.rs  gc_adopt_pipeline.rs  gc_project_root_cwd.rs  interceptor_enforcement.rs  notification_delivery.rs  review_store_cleanup.rs  runtime_submission_identity_contract.rs  state_invariants.rs  task_db_retention.rs  task_db_rounds.rs  task_db_shared_schema.rs  turn_start_lifecycle.rs  worktrees_api.rs
crates/harness-skills/: CHANGELOG.md  Cargo.toml
crates/harness-skills/src/: builtin.rs  discovery.rs  freshness.rs  lib.rs  store.rs  store_tests.rs
crates/harness-workflow/: CHANGELOG.md  Cargo.toml
crates/harness-workflow/src/: checkpoint.rs  circuit_breaker.rs  issue_lifecycle.rs  issue_workflow_store.rs  issue_workflow_store_tests.rs  lib.rs  plan_db.rs  project_lifecycle.rs  task_queue.rs  task_queue_aging_tests.rs  task_queue_permits.rs  task_queue_tests.rs
crates/harness-workflow/tests/: docs_examples.rs  state_registry_public_api.rs
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_client.py
(+1128 files in other folders)
