[workspace]
resolver = "2"
members = [
    "crates/harness-core",
    "crates/harness-protocol",
    "crates/harness-server",
    "crates/harness-agents",
    "crates/harness-sandbox",
    "crates/harness-gc",
    "crates/harness-rules",
    "crates/harness-skills",
    "crates/harness-exec",
    "crates/harness-context",
    "crates/harness-observe",
    "crates/harness-cli",
    "crates/harness-workflow",
]

[workspace.package]
version = "0.6.34"
edition = "2021"
license = "MIT"
rust-version = "1.88"
repository = "https://github.com/majiayu000/harness"

[workspace.lints.rust]
warnings = "deny"

[workspace.dependencies]
# Internal crates (version required so they can be published to crates.io)
harness-core = { path = "crates/harness-core", version = "0.6.34" }
harness-protocol = { path = "crates/harness-protocol", version = "0.6.34" }
harness-server = { path = "crates/harness-server", version = "0.6.34" }
harness-agents = { path = "crates/harness-agents", version = "0.6.34" }
harness-sandbox = { path = "crates/harness-sandbox", version = "0.6.34" }
harness-gc = { path = "crates/harness-gc", version = "0.6.34" }
harness-rules = { path = "crates/harness-rules", version = "0.6.34" }
harness-skills = { path = "crates/harness-skills", version = "0.6.34" }
harness-exec = { path = "crates/harness-exec", version = "0.6.34" }
harness-context = { path = "crates/harness-context", version = "0.6.34" }
harness-observe = { path = "crates/harness-observe", version = "0.6.34" }
harness-workflow = { path = "crates/harness-workflow", version = "0.6.34" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "sqlite", "chrono", "uuid"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Concurrency
dashmap = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
opentelemetry = { version = "0.27", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "metrics", "logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "metrics", "logs", "grpc-tonic", "http-proto", "reqwest-client"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Regex
regex = "1"

# File patterns
glob = "0.3"
shlex = "1.3"
starlark = "0.13"

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait
async-trait = "0.1"

# Futures
futures = "0.3"
tokio-stream = "0.1"
hmac = "0.12"
sha2 = "0.10"
subtle = "2"

# HTTP client (for Anthropic API)
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2"

# System info (memory pressure monitoring)
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

# Testing
tempfile = "3"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false
