[package]
name = "harness-agents"
version.workspace = true
edition.workspace = true
description = "Agent adapters (Claude Code, Codex) for the Harness orchestration layer"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
harness-core = { workspace = true }
harness-observe = { workspace = true }
harness-sandbox = { workspace = true }
tokio = { workspace = true, features = ["process", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
