[package]
name = "harness-api"
version.workspace = true
edition.workspace = true
description = "API contracts and types for the Harness agent orchestration layer"
repository.workspace = true
license.workspace = true

[dependencies]
harness-core = { workspace = true }
harness-protocol = { workspace = true }
harness-sandbox = { workspace = true }
harness-exec = { workspace = true }
