[package]
name = "harness-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
harness-core = { workspace = true }
harness-protocol = { workspace = true }
harness-server = { workspace = true }
harness-agents = { workspace = true }
harness-gc = { workspace = true }
harness-rules = { workspace = true }
harness-skills = { workspace = true }
harness-exec = { workspace = true }
harness-observe = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
