[package]
name = "harness-core"
version.workspace = true
edition.workspace = true
description = "Core domain model, configuration, prompts, and agent traits for Harness"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
anyhow = { workspace = true }
sqlx = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }
temp-env = "0.3"
