[package]
name = "harness-eval"
version.workspace = true
edition.workspace = true
description = "Pure evaluation models and deterministic scoring for Harness runs"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
harness-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
