[package]
name = "harness-exec"
version.workspace = true
edition.workspace = true
description = "Process execution helpers for the Harness agent orchestration layer"
license.workspace = true
repository.workspace = true

[dependencies]
harness-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
