[package]
name = "harness-gc"
version.workspace = true
edition.workspace = true

[dependencies]
harness-core = { workspace = true }
harness-rules = { workspace = true }
harness-observe = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
