[package]
name = "harness-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
harness-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
