[package]
name = "harness-protocol"
version.workspace = true
edition.workspace = true
description = "Protocol and message types for the Harness agent orchestration layer"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
harness-core = { workspace = true }
harness-context = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
