[package]
name = "harness-skills"
version.workspace = true
edition.workspace = true
description = "Skill discovery and management for the Harness agent orchestration layer"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
harness-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
