[package]
name = "harness-workflow"
version.workspace = true
edition.workspace = true
description = "Workflow runtime and state machine for the Harness agent orchestration layer"
license.workspace = true
repository.workspace = true

[dependencies]
harness-core = { workspace = true }
harness-exec = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
