[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-sdk"
version = "0.1.0"
description = "Python SDK for Harness JSON-RPC app server"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Future Frontiers" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["build>=1.2.2", "twine>=6.0.0", "pytest>=8.0.0"]
test = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
